--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Our system is composed of two complementary components: Prompt Designer and Pipe
 
 Demo video:
 ------------------
-You can see our tool in action at: ADD URL VIDEO
+You can see our tool in action at: https://vimeo.com/741423478
 
 Installation:
 ------------------
