--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Our system is composed of two complementary components: Prompt Designer and Pipe
 
 Demo video:
 ------------------
-You can see our tool in action at: https://youtu.be/v8AA6ErWnJQ
+You can see our tool in action at: https://youtu.be/_xVGsghZeX8
 
 Installation:
 ------------------
